/*
 *  UCF COP3330 Summer 2021 Assignment 5 Solution
 *  Copyright 2021 Karina Narotam
 */

package ucf.assignments;

public class Item {
    private String name, serial, price;

    public Item(String name, String serial, String price) {
        this.name = name;
        this.serial = serial;
        this.price = price;
    }
}
