@startuml
'https://plantuml.com/class-diagram

class App {
    start()
    main()
}

class ErrorMessage {
    showErrorAlert()
}

class InventoryTracker {
    + initialize()
    + changeNameCellEvent()
    + changePriceCellEvent()
    + changeSerialCellEvent()
    + deleteSelectedClicked()
    + addNewClicked()
    + saveTSV()
    + saveHTML()
    + saveJSON()
    + loadTSV()
    + loadHTML()
    +loadJSON()
}

class InventoryTrackerMethods {
    - inventory : ObservableList
    - SimpleItem
    + checkPrice()
    + checkName()
    + checkSerialUnique()
    + checkSerialFormatting()
    + addItem()
    + deleteItem()
    + searchItem()
    + tsvFormat()
    + tsvReader()
    + HTMLFormat()
    + readHTML()
    + serializeInventory()
    + deserialize()
    + saveTextToFile()
}

class Item {
    To be used for  json serialization
 - name: String
 - serial: String
 - value: String
}

class SimpleItem {
    - name: SimpleStringProperty
    - serialNumber: SimpleStringProperty
    - value: SimpleDoubleProperty

    + getName()
    + setName()
    + getSerialNumber()
    + setSerialNumber()
    + getValue()
    + setValue()
}

javafx.Application <|-- App
SimpleItem <|- InventoryTrackerMethods
InventoryTrackerMethods <|-- InventoryTracker
Item <|-- InventoryTrackerMethods
ErrorMessage <|-- InventoryTracker
InventoryTracker <|- javafx.Application
@enduml